WebKit doesn't allow replacing the document element with a DocumentFragment containing one element https://bugs.webkit.org/show_bug.cgi?id=88681

Patch by Elliott Sprehn <esprehn@gmail.com> on 2012-06-11
Reviewed by Ojan Vafai.

Source/WebCore:

Fix bug where replacing an immediate child of a Document with a DocumentFragment
would throw a HIERARCHY_REQUEST_ERR instead of replacing the node as required by DOM4.
http://www.w3.org/TR/domcore/#mutation-algorithms

* dom/Document.cpp:
(WebCore::Document::canReplaceChild):
    When the newChild was a DocumentFragment we incorrectly
    iterated over the document's children twice instead of the
    fragment when counting the total number of elements and
    doctypes to enfoce that there's only one of each.

LayoutTests:

Re-enables a bunch of disabled tests that are long since fixed and rewrites
the tests to use a more modern js-test-pre.js style.
https://bugs.webkit.org/show_bug.cgi?id=12751

* fast/dom/Document/replace-child-expected.txt:
* fast/dom/Document/replace-child.html:

Canonical link: https://commits.webkit.org/106670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120037 268f45cc-cd09-0410-ab3c-d52691b4dbfc